--- a/APAP/templates/base_index.html
+++ b/APAP/templates/base_index.html
@@ -11,9 +11,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="{% static 'image/index/fav-icon.png' %}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'image/rubber-duck.png' %}" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Drimo - App Landing Page Template</title>
+    <title>어푸어푸</title>
 
     <!-- Icon css link -->
     <link href="{% static 'css/index/font-awesome.min.css' %}" rel="stylesheet">
