--- a/APAP/main/templates/main/home.html
+++ b/APAP/main/templates/main/home.html
@@ -53,10 +53,9 @@
                             <h6>{{item.uploader}}</h6>
                         </div>
                         <ul>
-                            <div id="time-elapsed{{forloop.counter}}"></div>
-                            <div id="print_count">{{forloop.counter}}</div>
-                            <li id="date{{forloop.counter}}"><a href="#">{{ item.date }}</a></li>   
-                            <input type="hidden" id="print_date" name="variable" value="{{ item.date }}">                    
+                            <div class="time-elapsed"></div>
+                            <li class="date"><a href="#">{{ item.date }}</a></li>   
+                            <input type="hidden" class="print_date" name="variable" value="{{ item.date }}">                    
                         </ul>
                         <a class="price_btn" href="#">신청하기</a>
                     </div>
@@ -67,7 +66,12 @@
       
     </body>
 <script type="text/javascript">
-	var startDateTime = new Date(2019,8,26,2,1,0,0); // YYYY (M-1) D H m s (start time and date from DB)
+	var startDateTime = new Date(2019,7,10,2,1,0,0); // YYYY (M-1) D H m s (start time and date from DB)
+
+	// var getDates = document.getElementsByClassName("print_date");
+	// for(var i=0; i<getDates.length; i++) {
+	// 	startDateTime = getDates[i]
+	// }
 	var startStamp = startDateTime.getTime();
 
 	var newDate = new Date();
@@ -76,8 +80,12 @@
 	var timer;
 	var cnt = document.getElementById("print_count")
 
-	console.log("{{print.count}}"+"================")
 	function updateClock() {
+		var getDate = document.getElementsByClassName("date");
+		for (var i = 0; i < getDate.length; i++) {
+        	getDate[i].innerHTML = getDate[i].textContent;
+   		}
+
 	    newDate = new Date();
 	    newStamp = newDate.getTime();
 	    var diff = Math.round((startStamp-newStamp)/1000);
@@ -90,13 +98,11 @@
 	    diff = diff-(m*60);
 	    var s = diff;
 	    
-	   
-	    //for(int i=1; i< cnt; i++)
-	   	 document.getElementById("time-elapsed" + cnt).innerHTML = d+" 일 "+h+" 시간 "+m+" 분 "+s+" 초";
-	   	 
-	    // document.getElementById("time-elapsed" + 2).innerHTML = d+" 일 "+h+" 시간 "+m+" 분 "+s+" 초";
-	    // document.getElementById("time-elapsed" + 3).innerHTML = d+" 일 "+h+" 시간 "+m+" 분 "+s+" 초";
-	    // document.getElementById("time-elapsed" + 4).innerHTML = d+" 일 "+h+" 시간 "+m+" 분 "+s+" 초";
+		var elements = document.getElementsByClassName("time-elapsed");
+    	for (var i = 0; i < elements.length; i++) {
+        	elements[i].innerHTML = d+" 일 "+h+" 시간 "+m+" 분 "+s+" 초";
+   		}
+	    
 	}
 
 	setInterval(updateClock, 1000);
