--- a/APAP/main/templates/main/mypage.html
+++ b/APAP/main/templates/main/mypage.html
@@ -1,64 +1,62 @@
 <!--mypage-->
-{% extends 'base_index.html' %} <!-- base.html의 내용을 가져오겠다. -->
+{% extends 'base.html' %} <!-- base.html의 내용을 가져오겠다. -->
 {% load staticfiles %}
 {% block content %}
 
 
 <!doctype html>
 <html>
-
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Bootstrap 4 Multi-Select Plugin Demo</title>
 <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.1/materia/bootstrap.min.css">
 <style>
-body { min-height: 100vh;  font-family: 'Roboto'; }
+body { min-height: 100vh; background-color: #fafafa; font-family: 'Roboto'; }
 .container { margin: 150px auto; max-width: 640px; }
-.domain_search_area {
-    
-    background-size: cover;
-   
-    }
 </style>
-<link rel="preload" href="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net" as="script"><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script><script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://www.googletagservices.com/activeview/js/current/osd.js?cb=%2Fr20100101"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script><script type="text/javascript" src="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net"></script><link rel="preload" href="https://pagead2.googlesyndication.com/pagead/js/r20190724/r20190131/show_ads_impl.js" as="script">
+<link rel="preload" href="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net" as="script"><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script><script src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://www.googletagservices.com/activeview/js/current/osd.js?cb=%2Fr20100101"></script><script src="https://pagead2.googlesyndication.com/pub-config/r20160913/ca-pub-2783044520727903.js"></script><script type="text/javascript" src="https://adservice.google.co.kr/adsid/integrator.js?domain=www.jqueryscript.net"></script><link rel="preload" href="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net" as="script"><script type="text/javascript" src="https://adservice.google.com/adsid/integrator.js?domain=www.jqueryscript.net"></script><link rel="preload" href="https://pagead2.googlesyndication.com/pagead/js/r20190724/r20190131/show_ads_impl.js" as="script"></head>
 
 <body>
+  <div id="jquery-script-menu">
+<div class="jquery-script-center">
 
-<section class = "domain_search_area p_100" id="about">
-<div class="container">
-  <div class="main_title color_white">
-  <h2><center>시간표 선택</center></h2>
-  </div>
-  <div class="domain_inner">
-    
-    <form action="{% url 'main:selected_lectures' %}" method="POST"> 
-      {% csrf_token %}
-      <select name="lectures" id="lectures_id" class="form-control" multiple="multiple" style="display: none;">
-        {% for lecture in lectures %}
-          <option value="{{lecture.id}}" name="lec">{{lecture.name}} : {{lecture.code}}</option>
-        {% endfor %}
-      </select><br><br>
+<div class="jquery-script-ads"><script type="text/javascript"><!--
+google_ad_client = "ca-pub-2783044520727903";
+/* jQuery_demo */
+google_ad_slot = "2780937993";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><ins id="aswift_0_expand" style="display:inline-table;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:728px;background-color:transparent;" data-ad-slot="2780937993"><ins id="aswift_0_anchor" style="display:block;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:728px;background-color:transparent;"><iframe width="728" height="90" frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;border:0px;width:728px;height:90px;"></iframe></ins></ins></div>
 
-      <center><input type="submit" value="submit"/><center>
-   
-    
-  </div>
-  </form>
-
-
-<div class="domain_price_list">
-
-                  <ul>
-                    {% for item in schedule %}
-                    
-                    <li><a class="#" href="#"> <span>{{item.lecture.name}}</span></a></li>
-                    
-                     {% endfor %}
-                  </ul>
-                </div>
- 
 </div>
-</section>
+</div>
 
-
+<div class="container">
+  <h1><center>시간표 선택</center></h1>
+  <form action="{% url 'main:selected_lectures' 1 %}" method="POST"> 
+    {% csrf_token %}
+    <select name="lectures" id="lectures_id" class="form-control" multiple="multiple" style="display: none;">
+      {% for lecture in lectures %}
+        <option value="{{lecture.id}}" name="lec">{{lecture.name}} : {{lecture.code}}</option>
+      {% endfor %}
+    </select>
+    <br> <br>
+    <center><input type="submit" value="submit"/></center>
+  </form>
+</div>
+<div>
+  <h1><center>{{user.username}}의 시간표<center></h1>
+  {% for item in schedule %}
+    <h2><center><b>{{item.lecture.name}}</b> {{item.lecture.code}}</center></h2>
+  {% endfor %}
+</div>
+<br> <br>
   <iframe id="google_osd_static_frame_2812223392877" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
@@ -80,7 +78,7 @@ body { min-height: 100vh;  font-family: 'Roboto'; }
 
 </script>
 
-</body>
+<ins class="adsbygoogle adsbygoogle-noablate" data-adsbygoogle-status="done" style="display: none !important;"><ins id="aswift_1_expand" style="display:inline-table;border:none;height:0px;margin:0;padding:0;position:relative;visibility:visible;width:0px;background-color:transparent;"><ins id="aswift_1_anchor" style="display:block;border:none;height:0px;margin:0;padding:0;position:relative;visibility:visible;width:0px;background-color:transparent;"><iframe frameborder="0" marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_1" name="aswift_1" style="left:0;position:absolute;top:0;border:0px;width:0px;height:0px;"></iframe></ins></ins></ins></body>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
